--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,5 +1,5 @@
 # Change these first
-owner: peterpusztka # change me
+owner: Fuseit # change me?
 repo: fuse-upptime # Your GitHub repository name
 
 # Add your sites here
@@ -17,7 +17,7 @@ status-website:
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: beta fuse uptime page
+  introMessage: "[beta] fuse uptime page"
   navbar:
     - title: Status
       href: /
